# uniXerr

./: .dockerignore  .env  .gitignore  Cargo.toml  DEV.src  DL_unsup_tasks.ipynb  Dockerfile  README.md  TODO  app.py  cass.sh  controller.py  deploy.sh  dev.guide  docker-compose.yml  eye.py  init.sh  launch.sh  papers  references.txt  run.sh  uniXerr-cli.md  uniXerr.yml
core/ayoub/coiniXerr/: .env  Cargo.toml  README.md
core/ayoub/coiniXerr/config/: app.toml  riker.toml
core/ayoub/coiniXerr/src/: actors.rs  build.rs  constants.rs  engine.rs  lib.rs  main.rs  node.rs  rtp.rs  schemas.capnp  schemas.rs  utils.rs
core/ayoub/coiniXerr/src/actors/: parathread.rs  peer.rs  rafael.rs  unixerr.rs
core/ayoub/coiniXerr/src/capnps/: hoopoe.capnp
core/ayoub/coiniXerr/src/cips/: rpc.server.rs  tcp.p2p.rs  tcp.server.rs  zmq.p2p.rs
core/ayoub/coiniXerr/src/engine/: codec.rs  cvm.rs  jobq.rs  onion.rs
core/ayoub/coiniXerr/src/engine/codec/: decoder.rs  encoder.rs
core/ayoub/coiniXerr/src/engine/consensus/: governance.rs  pos.rs
core/ayoub/coiniXerr/src/engine/contract/: token.rs
core/ayoub/coiniXerr/src/engine/cvm/: stack.rs
core/ayoub/coiniXerr/src/rtp/: README.md  grpc.rs  mq.rs  p2p.rs  wrtc.rs  ws.rs
core/ayoub/coiniXerr/src/rtp/grpc/: coinixerr.rs  hoopoe.rs  server.rs  wallexerr.rs
core/ayoub/coiniXerr/src/rtp/mq/: hoopoe.rs  wallexerr.rs
core/ayoub/coiniXerr/src/rtp/rpc/: server.rs
core/ayoub/coiniXerr/src/rtp/socks/: server.rs
core/ayoub/coiniXerr/src/rtp/wrtc/: server.rs
core/ayoub/coiniXerr/src/rtp/ws/: server.rs
core/ayoub/coiniXerr/src/tests/: main.rs
core/ayoub/coiniXerr/src/tlps/: rpc.server.rs  tcp.server.rs
core/ayoub/coiniXerr/src/utils/: api.rs  hexy.rs  jobq.rs  onion.rs  scheduler.rs
core/ayoub/coiniXerr/src/wallet/: Cargo.toml  README.md  build.sh
core/ayoub/psychoder/: Cargo.toml  README.md
core/ayoub/psychoder/src/: networks.rs
core/ayoub/psychoder/src/networks/: mlp.rs
core/ayoub/psychoder/src/networks/ssl/: gan.rs
core/ayoub/psychoder/src/schemas/: brain.rs
core/ayoub/psychoder/src/theories/: information.rs
infra/ayoub/coiniXerr/: .env  Cargo.toml  README.md
infra/ayoub/coiniXerr/src/: actors.rs  constants.rs  engine.rs  lib.rs  node.rs  schemas.rs  utils.rs
infra/ayoub/coiniXerr/src/actors/: parathread.rs  peer.rs  rafael.rs
infra/ayoub/coiniXerr/src/drafts/: rmq.rs
infra/ayoub/coiniXerr/src/engine/: consensus.rs  cvm.rs  jobq.rs  onion.rs  worker.rs
infra/ayoub/coiniXerr/src/engine/consensus/: poh.rs  raft.rs  zpk.rs
infra/ayoub/coiniXerr/src/engine/cvm/: README.md  bpf.rs
infra/ayoub/coiniXerr/src/tests/: main.rs
infra/ayoub/coiniXerr/src/tlps/: p2p.pubsub.rs  rpc.server.rs  tcp.server.rs  udp.server.rs
infra/ayoub/stem/: Cargo.toml  README.md
infra/ayoub/stem/src/: brain.rs  lib.rs  mathista.rs  schemas.rs
infra/ayoub/stem/src/mathista/: psychovision.rs
server/core/: Cargo.toml  helper_board  helper_board.txt  streamer.rs  uPC.rs
server/core/src/: main.rs
server/skeleton/microservices/: .env  Cargo.toml
server/skeleton/microservices/auth/: Cargo.toml  README.md  helper_board
server/skeleton/microservices/auth/migrations/00000000000000_diesel_initial_setup/: up.sql
server/skeleton/microservices/auth/migrations/2021-06-19-134851_create_users/: up.sql
server/skeleton/microservices/auth/migrations/2021-08-29-060815_create_user_match/: down.sql  up.sql
server/skeleton/microservices/auth/migrations/2021-08-29-114755_create_login_history/: down.sql  up.sql
server/skeleton/microservices/auth/migrations/2021-09-25-174001_create_user_friend/: down.sql  up.sql
server/skeleton/microservices/auth/src/: constants.rs  controllers.rs  entities.rs  handlers.rs  lib.rs  main.rs  middlewares.rs  schema.rs  services.rs  utils.rs
server/skeleton/microservices/auth/src/controllers/: adminer.rs  auth.rs
server/skeleton/microservices/auth/src/entities/: login_history.rs  user_friend.rs  user_match.rs  users.rs
server/skeleton/microservices/auth/src/handlers/: db.rs  error.rs
server/skeleton/microservices/auth/src/services/: account.rs
server/skeleton/microservices/auth/src/utils/: jwt.rs
server/skeleton/microservices/coiniXerr/: Cargo.toml  README.md  helper_board
server/skeleton/microservices/coiniXerr/src/: actors.rs  apis.rs  consensus.rs  constants.rs  cvm.rs  engine.rs  handlers.rs  lib.rs  libs.rs  main.rs  networks.rs  p2p.rs  peer.rs  schemas.rs  utils.rs
server/skeleton/microservices/coiniXerr/src/actors/: miner.rs  parathread.rs  peer.rs
server/skeleton/microservices/coiniXerr/src/apis/: wallet.rs
server/skeleton/microservices/coiniXerr/src/client/: Cargo.toml  main.rs
server/skeleton/microservices/coiniXerr/src/consensus/: pos.rs
server/skeleton/microservices/coiniXerr/src/cvm/: contract.rs
server/skeleton/microservices/coiniXerr/src/engine/: codec.rs  consensus.rs  cvm.rs
server/skeleton/microservices/coiniXerr/src/handlers/: actors.rs  jobq.rs  pos.rs  socket.rs
server/skeleton/microservices/coiniXerr/src/libs/: actors.rs  contract.rs  nft.rs  req.rs  scheduler.rs  token.rs
server/skeleton/microservices/coiniXerr/src/p2p/: node.rs
server/skeleton/microservices/fearless/: Cargo.toml  README.md  helper_board
server/skeleton/microservices/fearless/src/: lib.rs
server/skeleton/microservices/musiem/: Cargo.toml  README.md  helper_board
server/skeleton/microservices/neura/: Cargo.toml  README.md  helper_board
server/skeleton/microservices/neura/src/: handlers.rs  main.rs
server/skeleton/microservices/psychoder/: Cargo.toml  README.md
server/skeleton/microservices/psychoder/src/: handlers.rs  lib.rs  main.rs  mathista.rs  networks.rs  schemas.rs  utils.rs
server/skeleton/microservices/suproxy/: Cargo.toml  README.md
server/skeleton/microservices/suproxy/src/: handlers.rs  lib.rs  main.rs
server/skeleton/microservices/tracer/: Cargo.toml  README.md
server/skeleton/microservices/tracer/src/: api.rs  constants.rs  handlers.rs  lib.rs  main.rs  schemas.rs  utils.rs
server/skeleton/microservices/wolfia/: Cargo.toml  helper_board
(+586 files in other folders)
