

[workspace]

members = [
    "server/skeleton/microservices/auth",
    "server/skeleton/microservices/suproxy",
    "server/skeleton/microservices/coiniXerr",
    "server/skeleton/microservices/coiniXerr/src/client",
    "server/skeleton/microservices/psychoder",
]


[profile.dev.package.auth]
opt-level = 0
[profile.release.package.auth]
opt-level = 3

[profile.dev.package.suproxy]
opt-level = 0
[profile.release.package.suproxy]
opt-level = 3

[profile.dev.package.psychoder]
opt-level = 0
[profile.release.package.psychoder]
opt-level = 3

[profile.dev.package.coiniXerr]
opt-level = 0
[profile.release.package.coiniXerr]
opt-level = 3

[profile.dev.package.coiniXerr.client]
opt-level = 0
[profile.release.package.coiniXerr.client]
opt-level = 3