[package]
name = "stem"
version = "0.1.0"
authors = ["wildonion <marefimoghaddam@unixerr.com>"]
edition = "2021"



[dependencies]
tokio = { version = "1", features = ["full"] }
riker = "0.4.1"
riker-patterns = "0.4.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
dotenv = "0.15"
env_logger = "0.8"
hex = "0.4"
futures = "0.3"
rayon = "1"



[lib]
name = "daemon"
path = "src/lib.rs"


[[bin]]
name = "stem"
path = "src/brain.rs"
