

[workspace]

members = [
    "auth",
    "suproxy",
    "coiniXerr",
    "psychoder",
]


[profile.dev.package.auth]
opt-level = 0
[profile.release.package.auth]
opt-level = 3

[profile.dev.package.suproxy]
opt-level = 0
[profile.release.package.suproxy]
opt-level = 3

[profile.dev.package.psychoder]
opt-level = 0
[profile.release.package.psychoder]
opt-level = 3

[profile.dev.package.coiniXerr]
opt-level = 0
[profile.release.package.coiniXerr]
opt-level = 3