[package]
name = "auth"
version = "0.1.0"
authors = ["wildonion <marefimoghaddam@unixerr.com>"]
edition = "2018"



[dependencies]
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
actix-web = "3"
actix-session = "0.4.1"
actix-multipart = "0.3.0"
actix = "0.12.0"
sanitize-filename = "0.3.0"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
dotenv = "0.15.0"
env_logger = "0.8.3"
listenfd = "0.3.5"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.0"
futures = "0.3"
bcrypt = "0.10"




[[bin]]
name = "auth"
path = "src/main.rs"
