[package]
name = "auth"
version = "0.1.0"
authors = ["wildonion <marefimoghaddam@unixerr.com>"]
edition = "2021"



[dependencies]
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
actix-web = "3"
actix-session = "0.4"
actix-multipart = "0.3"
actix = "0.12"
sanitize-filename = "0.3"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
dotenv = "0.15"
env_logger = "0.8"
listenfd = "0.3"
r2d2 = "0.8"
r2d2_postgres = "0.18"
futures = "0.3"
bcrypt = "0.10"






[lib]
name = "liber"
path = "src/lib.rs"



[[bin]]
name = "auth"
path = "src/main.rs"
