[package]
name = "coiniXerr"
version = "0.1.0"
authors = ["wildonion <marefimoghaddam@unixerr.com>"]
edition = "2021"



[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
actix = "0.12"
actix-session = "0.4.1"
actix-web = "3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
listenfd = "0.3.5"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
dotenv = "0.15.0"
env_logger = "0.8.3"
hex = "0.4.3"
futures = "0.3.17"
bcrypt = "0.10"





[[bin]]
name = "coiniXerr"
path = "src/main.rs"
