[package]
name = "fearless"
version = "0.1.0"
authors = ["wildonion <marefimoghaddam@unixerr.com>"]
edition = "2018"



[dependencies]
rdkafka = { version = "0.25", features = ["cmake-build"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.12.0", features = ["full"] }
cdrs-tokio = "5.0.0"
cdrs-tokio-helpers-derive = "3.0.0"
serde = "1.0.125"
serde_json = "1.0.64"
warp = "0.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
dotenv = "0.15.0"
env_logger = "0.8.3"
hex = "0.4.3"
futures = "0.3.17"



[lib]
name = "fearlessper"
path = "src/lib.rs"


[[bin]]
name = "fearless"
path = "src/main.rs"
