[package]
name = "psychoder"
version = "0.1.0"
authors = ["wildonion <marefimoghaddam@unixerr.com>"]
edition = "2018"



[dependencies]
rdkafka = { version = "0.25", features = ["cmake-build"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = "1.0.125"
serde_json = "1.0.64"
warp = "0.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
dotenv = "0.15.0"
env_logger = "0.8.3"
hex = "0.4.3"
futures = "0.3.17"



[lib]
name = "utilser"
path = "src/lib.rs"


[[bin]]
name = "psychoder"
path = "src/main.rs"
