[package]
name = "psychoder"
version = "0.1.0"
authors = ["wildonion <marefimoghaddam@unixerr.com>"]
edition = "2018"



[dependencies]
tokio = { version = "1", features = ["full"] }
actix = "0.12"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
dotenv = "0.15.0"
env_logger = "0.8.3"
hex = "0.4.3"
futures = "0.3.17"



[lib]
name = "utilser"
path = "src/lib.rs"


[[bin]]
name = "psychoder"
path = "src/main.rs"
