[package]
name = "tracer"
version = "0.1.0"
authors = ["wildonion <marefimoghaddam@unixerr.com>"]
edition = "2018"



[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
actix-web = "3"
actix-session = "0.4.1"
actix-multipart = "0.3.0"
actix = "0.12.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
dotenv = "0.15.0"
env_logger = "0.8.3"
listenfd = "0.3.5"
hex = "0.4.3"
futures = "0.3.17"



[lib]
name = "heleriumer"
path = "src/lib.rs"



[[bin]]
name = "tracer"
path = "src/main.rs"
