[package]
name = "walleXerr"
version = "0.1.0"
edition = "2021"


[dependencies]
uuid = { version = "1", features = ["serde", "v4"] }
borsh = "0.9.3"
serde_json = "1"
serde = {version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
yew = "0.1"
yew-router = "0.1"
js-sys = "0.3"



[[bin]]
name = "walleXerr"
path = "src/main.rs"



[lib]
# libraries don't have entry points, you can't run them,they're used for functionality sharing like binding a .wasm into js codes
# we need lib.rs and crate type of cdylib for none binary like .wasm, .so, .dylib and .dll files
crate-type = ["cdylib", "rlib"]
name = "rt"
path = "src/lib.rs"