[package]
name = "smarties"
version = "0.1.0"
edition = "2021"




[dependencies]
solana-program = "1.8.8"
borsh = "0.9.1"
borsh-derive = "0.9.1"


[features]
test-bpf = []
no-entrypoint = []
bloody-panic = []



[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.8.8"
solana-sdk = "1.8.8"
solana-validator = "1.8.8"



[lib]
crate-type = ["cdylib", "lib"]
